--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.0.2",
+    "@mui/x-date-pickers": "^7.18.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.4",
+    "date-fns": "^2.29.3",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.452.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.13.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +51,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^1.7.7",
+    "formik": "^2.4.6",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux": "^5.0.1"
   }
 }
